Issue 01.02.01 - Added to project element header

--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,32 @@
 
 <body>
   <div class="wrapper">
-    <header>
-    <div class="container"></div>
+    <header class="header">
+      <div class="container">
+        <div class="header__top">
+          <div class="logo">
+            <a href="#">
+              <img src="images/logo.png" alt="">
+            </a>
+          </div>
+          <div class="header__btn">
+            <div class="header__btn__line"></div>
+            <div class="header__btn__line"></div>
+            <div class="header__btn__line"></div>
+          </div>
+        </div>
+        <div class="header-content">
+          <h1 class="header-content__title">
+            Roadster
+          </h1>
+          <div class="header-content__text">
+            Самый быстрый автомобиль в мире, с рекордным ускорением, дальностью и производительностью.
+          </div>
+          <div class="header-drive__btn">
+            <button class="drive__btn">Хочу тест драйв</button>
+          </div>
+        </div>
+      </div>
     </header>
   
     <main>
