--- a/app/index.html
+++ b/app/index.html
@@ -48,8 +48,23 @@
       <div class="container"></div>
     </main>
     
-    <footer>
-      <div class="container"></div>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer__btn">
+            <button class="drive__btn">Хочу тест драйв</button>
+          </div>
+          <ul class="footer__menu">
+            <li class="footer__menu-item">Tesla © 2020</li>
+            <li class="footer__menu-item"><a href="#">Privacy & Legal</a></li>
+            <li class="footer__menu-item"><a href="#">Contact</a></li>
+            <li class="footer__menu-item"><a href="#">Careers</a></li>
+            <li class="footer__menu-item"><a href="#">Get Newsletter</a></li>
+            <li class="footer__menu-item"><a href="#">Forums</a></li>
+            <li class="footer__menu-item"><a href="#">Locations</a></li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </div>
   
