--- a/app/index.html
+++ b/app/index.html
@@ -56,12 +56,12 @@
           </div>
           <ul class="footer__menu">
             <li class="footer__menu-item">Tesla © 2020</li>
-            <li class="footer__menu-item"><a href="#">Privacy & Legal</a></li>
-            <li class="footer__menu-item"><a href="#">Contact</a></li>
-            <li class="footer__menu-item"><a href="#">Careers</a></li>
-            <li class="footer__menu-item"><a href="#">Get Newsletter</a></li>
-            <li class="footer__menu-item"><a href="#">Forums</a></li>
-            <li class="footer__menu-item"><a href="#">Locations</a></li>
+            <li class="footer__menu-item"><a class="footer__menu-link" href="#">Privacy & Legal</a></li>
+            <li class="footer__menu-item"><a class="footer__menu-link" href="#">Contact</a></li>
+            <li class="footer__menu-item"><a class="footer__menu-link" href="#">Careers</a></li>
+            <li class="footer__menu-item"><a class="footer__menu-link" href="#">Get Newsletter</a></li>
+            <li class="footer__menu-item"><a class="footer__menu-link" href="#">Forums</a></li>
+            <li class="footer__menu-item"><a class="footer__menu-link" href="#">Locations</a></li>
           </ul>
         </div>
       </div>
