Issue 01.07.01 - Added element slider in index.html

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,14 @@
         </div>
       </div>
     </header>
+
+    <section class="slider__top">
+      <div class="slider">
+        <div class="slider__item" style="background-image: url(images/slider/tesla-slide-1.jpg)"></div>
+        <div class="slider__item" style="background-image: url(images/slider/tesla-slide-2.jpg)"></div>
+        <div class="slider__item" style="background-image: url(images/slider/tesla-slide-3.jpg)"></div>
+      </div>
+    </section>
   
     <section class="statistics">
       <div class="container">
