--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,21 @@
       </div>
     </header>
 
+    <nav class="menu">
+      <div class="container container-menu">
+        <div class="menu__close-btn"></div>
+        <div class="menu__list">
+          <ul>
+            <li class="menu__item"><a href="#">Узнать цену</a></li>
+            <li class="menu__item"><a href="#">Характеристики</a></li>
+            <li class="menu__item"><a href="#">Тест Драйв</a></li>
+            <li class="menu__item"><a href="#">Новости</a></li>
+            <li class="menu__item"><a href="#">Контакты</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <section class="slider__top">
       <div class="slider">
         <div class="slider__item" style="background-image: url(images/slider/tesla-slide-1.jpg)"></div>
