--- a/app/index.html
+++ b/app/index.html
@@ -49,11 +49,11 @@
         <div class="menu__close-btn"></div>
         <div class="menu__list">
           <ul>
-            <li class="menu__item"><a href="#">Узнать цену</a></li>
-            <li class="menu__item"><a href="#">Характеристики</a></li>
-            <li class="menu__item"><a href="#">Тест Драйв</a></li>
-            <li class="menu__item"><a href="#">Новости</a></li>
-            <li class="menu__item"><a href="#">Контакты</a></li>
+            <li class="menu__item"><a href="#">Price</a></li>
+            <li class="menu__item"><a href="#">Characteristics</a></li>
+            <li class="menu__item"><a href="#">Test Drive</a></li>
+            <li class="menu__item"><a href="#">News</a></li>
+            <li class="menu__item"><a href="#">Contacts</a></li>
           </ul>
         </div>
       </div>
