Issue 01.12.02 - Fixed mistakes

--- a/app/index.html
+++ b/app/index.html
@@ -35,10 +35,10 @@
             Roadster
           </h1>
           <div class="header-content__text">
-            Самый быстрый автомобиль в мире, с рекордным ускорением, дальностью и производительностью.
+            The fastest car in the world, with record acceleration, range and performance.
           </div>
           <div class="header-drive__btn">
-            <button class="drive__btn">Хочу тест драйв</button>
+            <button class="drive__btn">Test Drive</button>
           </div>
         </div>
       </div>
@@ -53,7 +53,7 @@
             <li class="menu__item"><a href="#">Characteristics</a></li>
             <li class="menu__item"><a href="#">Test Drive</a></li>
             <li class="menu__item"><a href="#">News</a></li>
-            <li class="menu__item"><a href="#">Contacts</a></li>
+            <li class="menu__item"><a href="#">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -95,7 +95,7 @@
       <div class="container">
         <div class="footer__inner">
           <div class="footer__btn">
-            <button class="drive__btn">Хочу тест драйв</button>
+            <button class="drive__btn">Test Drive</button>
           </div>
           <ul class="footer__menu">
             <li class="footer__menu-item">Tesla © 2020</li>
