--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,14 @@
         </div>
       </div>
     </section>
+
+    <section class="section-video">
+      <div class="container">
+        <a data-fancybox="gallery" href="https://www.youtube.com/embed/tw4jkyfY4HE">
+          <img class="control__level-video" src="images/image-for-video.jpeg" width="100%" height="100%" />
+        </a>
+      </div>
+    </section>
     
     <footer class="footer">
       <div class="container">
