--- a/app/index.html
+++ b/app/index.html
@@ -94,7 +94,8 @@
     <section class="section-video">
       <div class="container">
         <a data-fancybox="gallery" href="https://www.youtube.com/embed/tw4jkyfY4HE">
-          <img class="control__level-video" src="images/image-for-video.jpeg" width="100%" height="100%" />
+          <img class="section-video__image" src="images/image-video.jpg" width="100%" height="100%" />
+          <img class="section-video__btn" src="images/btn-play.png" alt="play">
         </a>
       </div>
     </section>
