Issue 01.15.01 - Added element advantages in index.html

--- a/app/index.html
+++ b/app/index.html
@@ -99,6 +99,41 @@
         </a>
       </div>
     </section>
+
+    <section class="advantages">
+      <div class="container">
+        <div class="advantages__inner">
+          <div class="advantages__speed">
+            <h2 class="advantages__speed__title">Скорость</h2>
+            <p class="advantages__speed__text">
+              Самый<br>
+              быстроразгоняющийся<br>
+              серийный автомобиль<br>
+              из когда-либо созданных<br>
+            </p>
+          </div>
+          <div class="advantages__speed-img">
+            <img src="images/speed-img.jpg" alt="image">
+          </div>
+          <div class="advantages__points-img">
+            <img src="images/point-img.jpg" alt="image">
+          </div>
+          <div class="advantages__points">
+            <p class="advantages__points__text">
+              Датчик дождя<br>
+              Датчик света<br>
+              Автопилот<br>
+              Навигационная система<br>
+              Обогрев зеркал<br>
+              Усилитель руля<br>
+              Панорамная крыша<br>
+              Ксеноновые фары<br>
+            </p>
+            <h2 class="advantages__points__title">Преимущества</h2>
+          </div>
+        </div>
+      </div>
+    </section>
     
     <footer class="footer">
       <div class="container">
