Issue 01.16.01 - Added styles for element advantages

--- a/app/index.html
+++ b/app/index.html
@@ -104,32 +104,32 @@
       <div class="container">
         <div class="advantages__inner">
           <div class="advantages__speed">
-            <h2 class="advantages__speed__title">Скорость</h2>
+            <h2 class="advantages__speed__title">Speed</h2>
             <p class="advantages__speed__text">
-              Самый<br>
-              быстроразгоняющийся<br>
-              серийный автомобиль<br>
-              из когда-либо созданных<br>
+              Most<br>
+              rapidly accelerating<br>
+              stock car<br>
+              ever created<br>
             </p>
           </div>
           <div class="advantages__speed-img">
-            <img src="images/speed-img.jpg" alt="image">
+            <img src="images/content/speed-img.jpg" alt="image">
           </div>
           <div class="advantages__points-img">
-            <img src="images/point-img.jpg" alt="image">
+            <img src="images/content/point-img.jpg" alt="image">
           </div>
           <div class="advantages__points">
             <p class="advantages__points__text">
-              Датчик дождя<br>
-              Датчик света<br>
-              Автопилот<br>
-              Навигационная система<br>
-              Обогрев зеркал<br>
-              Усилитель руля<br>
-              Панорамная крыша<br>
-              Ксеноновые фары<br>
+              Rain sensor<br>
+              Light sensor<br>
+              Autopilot<br>
+              Navigation system<br>
+              Heated mirrors<br>
+              Power steering<br>
+              A roof with a panoramic view<br>
+              Xenon headlights<br>
             </p>
-            <h2 class="advantages__points__title">Преимущества</h2>
+            <h2 class="advantages__points__title">Advantages</h2>
           </div>
         </div>
       </div>
