Issue 01.17.01 - Added element design in index.html

--- a/app/index.html
+++ b/app/index.html
@@ -134,6 +134,31 @@
         </div>
       </div>
     </section>
+
+    <section class="design">
+      <div class="container">
+        <div class="design__inner">
+          <img class="design__img" src="images/content/design-img.jpg" alt="image">
+          <div class="design__info">
+            <div class="design__row">
+              <div class="design__num">01</div>
+              <p class="design__text">
+                The new roadster was designed by former Mazda designer Franz von Holzhausen.<br>
+                It has a removable glass roof and a body with two front seats plus two small rear seats.
+              </p>
+            </div>
+            <div class="design__row">
+              <div class="design__num">02</div>
+              <p class="design__text">
+                The Roadster has three electric motors, one in the front and two in the rear.<br>
+                They provide all-wheel drive, as well as a system of targeted torque distribution for better
+                passing turns.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     
     <footer class="footer">
       <div class="container">
